--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
 	<title>SwapIt - Trao đổi đồ cũ cho sinh viên | Làng Đại Học</title>
 	<meta charset="utf-8">
@@ -25,11 +24,9 @@
 		href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
 		rel="stylesheet">
 </head>
-
 <body>
 	<!-- SVG icons kept; you can add item / location icons if needed -->
 	<svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
-		<!-- icons (kept from original or add new ones) -->
 		<symbol xmlns="http://www.w3.org/2000/svg" id="check-circle" viewBox="0 0 60 60">
 			<path d="M30 5.625C16.5 5.625 5.625 16.5 5.625 30C5.625 43.5 16.5 54.375 30 54.375C43.5 54.375 54.375 43.5 54.375 30C54.375 27.3787 54.0225 24.7631 53.085 22.3237L50.04 25.3125C50.415 26.8125 50.6269 28[...]"
 				fill="currentColor" />
@@ -38,10 +35,8 @@
 
 	<nav id="header" class="navbar fixed-top py-3 px-2 p-md-4 border-bottom border-black bg-white">
 		<div class="container-fluid">
-			<div class="navbar-brand">
-				<a href="index.html">
-					<img src="images/logo-swapit.png" alt="SwapIt Logo" style="height:40px;">
-				</a>
+			<div class="navbar-brand fw-bold fs-4">
+				<a href="index.html" class="text-decoration-none text-dark">SwapIt</a>
 			</div>
 			<button class="navbar-toggler shadow-none border border-0 text-black" type="button"
 				data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar"
@@ -69,7 +64,7 @@
 					</ul>
 
 					<div class="mt-5">
-						<img src="images/menu-market.png" alt="menu image" class="img-fluid">
+						<img src="https://source.unsplash.com/400x300/?campus,market" alt="menu image" class="img-fluid rounded">
 					</div>
 				</div>
 			</div>
@@ -91,7 +86,7 @@
 				</div>
 				<div class="col-md-6">
 					<figure class="bannerimg position-relative">
-						<img src="images/market-banner.jpg" class="img-fluid rounded" alt="market banner">
+						<img src="https://source.unsplash.com/1200x800/?university,students,market" class="img-fluid rounded" alt="market banner">
 					</figure>
 				</div>
 			</div>
@@ -103,7 +98,7 @@
 		<div class="container bg-light p-md-5 overflow-hidden">
 			<div class="row align-items-center p-4 g-md-5">
 				<div class="col-md-6" data-aos="fade-right">
-					<img src="images/about-market.jpg" class="img-fluid rounded" alt="about">
+					<img src="https://source.unsplash.com/800x600/?student,books,study" class="img-fluid rounded" alt="about">
 				</div>
 				<div class="col-md-6 mt-4 mt-md-0" data-aos="fade-left">
 					<div class="text-content ps-md-4">
@@ -148,7 +143,7 @@
 		<div class="container overflow-hidden">
 			<div class="row align-items-start g-md-4">
 				<div class="col-md-6">
-					<img src="images/listings-side.jpg" class="img-fluid rounded" alt="listings">
+					<img src="https://source.unsplash.com/800x600/?backpack,books" class="img-fluid rounded" alt="listings">
 				</div>
 				<div class="col-md-6 ps-md-5 mt-4 mt-md-0">
 					<div class="mb-3">
@@ -264,9 +259,9 @@
 		<div class="container">
 			<h4 class="mb-3">Đồ nổi bật tuần</h4>
 			<div class="d-flex flex-wrap gap-3">
-				<img src="images/feat-1.jpg" alt="feat" class="img-fluid rounded" style="width:200px;">
-				<img src="images/feat-2.jpg" alt="feat" class="img-fluid rounded" style="width:200px;">
-				<img src="images/feat-3.jpg" alt="feat" class="img-fluid rounded" style="width:200px;">
+				<img src="https://source.unsplash.com/400x400/?furniture,desk" alt="feat" class="img-fluid rounded" style="width:200px; height:200px; object-fit:cover;">
+				<img src="https://source.unsplash.com/400x400/?backpack" alt="feat" class="img-fluid rounded" style="width:200px; height:200px; object-fit:cover;">
+				<img src="https://source.unsplash.com/400x400/?books" alt="feat" class="img-fluid rounded" style="width:200px; height:200px; object-fit:cover;">
 			</div>
 		</div>
 	</section>
@@ -274,7 +269,7 @@
 	<footer id="footer" class="padding-medium bg-white border-top">
 		<div class="container">
 			<div class="text-center mb-3">
-				<img src="images/logo-footer.png" class="img-fluid" alt="SwapIt" style="height:40px;">
+				<span class="fw-bold">SwapIt</span>
 			</div>
 			<div class="d-flex justify-content-center my-3">
 				<a href="#" class="mx-2">Facebook</a>
@@ -307,5 +302,4 @@
 		}
 	</script>
 </body>
-
 </html>
