--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
 					</svg>
 				</div>
 				<a href="#">
-					<img src="images/insta-1.jpg" alt="app-screenshot-1" class="img-fluid p-3">
+					<img src="images/insta-1.png" alt="app-screenshot-1" class="img-fluid p-3">
 				</a>
 			</div>
 			<div class="instagram-item position-relative">
@@ -411,7 +411,7 @@
 					</svg>
 				</div>
 				<a href="#">
-					<img src="images/insta-2.jpg" alt="app-screenshot-2" class="img-fluid p-3">
+					<img src="images/insta-2.png" alt="app-screenshot-2" class="img-fluid p-3">
 				</a>
 			</div>
 			<div class="instagram-item position-relative">
@@ -421,7 +421,7 @@
 					</svg>
 				</div>
 				<a href="#">
-					<img src="images/insta-3.jpg" alt="app-screenshot-3" class="img-fluid p-3">
+					<img src="images/insta-3.png" alt="app-screenshot-3" class="img-fluid p-3">
 				</a>
 			</div>
 
