--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 							</div>
 
 						</div>
-						<img src="images/banner.png" class="img-fluid" alt="image">
+						<img src="images/banner.jpg" class="img-fluid" alt="image">
 					</figure>
 				</div>
 			</div>
@@ -288,7 +288,7 @@
 								<div class="swiper-pagination position-relative text-start px-5 pb-5"></div>
 							</div>
 						</div>
-						<img src="images/testimonial-img.png " class="img-fluid" alt="student feedback">
+						<img src="images/testimonial-img.jpg " class="img-fluid" alt="student feedback">
 					</figure>
 				</div>
 			</div>
