Update button styles and layout in index.html

--- a/index.html
+++ b/index.html
@@ -112,7 +112,19 @@
 							<div class="billbord-section">
 								<h4 class="secondary-heading py-3">Giải Pháp Tiết Kiệm Cho Làng Đại Học</h4>
 								<p>Tìm kiếm, trao đổi, hoặc tặng đi những món đồ bạn không còn dùng tới. Nhanh chóng, an toàn và ngay trong cộng đồng sinh viên của bạn.</p>
-								<a href="#subscribe" class="border-animation mt-2">Tải App Ngay</a>
+								<a href="#subscribe" class="btn btn-outline-primary px-5 py-3">Tải App Ngay</a>
+								<a href="https://www.behance.net/gallery/240242235/ReuseUni-Student-Marketplace-App"
+								class="btn btn-outline-primary px-5 py-3"
+								target="_blank">
+									Xem Behance Case Study
+								</a>
+
+								<a href="https://www.figma.com/design/k5GiTmZeSafBUGYg4avD0Z/Mobile-App?node-id=0-1&p=f&t=ANDwp9dKSH9fBSTR-0"
+								class="btn btn-outline-primary px-5 py-3"
+								style="margin-top: 2px;"
+								target="_blank">
+									Xem Figma Prototype
+								</a>
 							</div>
 
 						</div>
@@ -229,11 +241,11 @@
 					<img src="images/posts-img.png" class="img-fluid" alt="student community">
 				</div>
 				<div class="col-md-6 ps-md-5 mt-5 mt-md-0" data-aos="fade-left">
-					<div class="mb-5">
-						<h2 class="display-3">Vì Sao Chọn Student Exchange?</h2>
-						<h4 class="secondary-heading py-3">Lợi Ích Cho Sinh Viên Làng Đại Học</h4>
-						<p>Chúng tôi xây dựng một cộng đồng an toàn, tiết kiệm và bền vững. Việc trao đổi đồ cũ giúp bạn tiết kiệm tiền và góp phần giảm rác thải.</p>
-					</div>
+<div class="mb-5" > 
+    <h2 class="display-3" style="margin-top: 2cm;">Vì Sao Chọn Student Exchange?</h2>
+    <h4 class="secondary-heading py-3">Lợi Ích Cho Sinh Viên Làng Đại Học</h4>
+    <p>Chúng tôi xây dựng một cộng đồng an toàn, tiết kiệm và bền vững. Việc trao đổi đồ cũ giúp bạn tiết kiệm tiền và góp phần giảm rác thải.</p>
+</div>
 
 					<div class="mt-3">
 						<p><span class="text-primary">✓</span> <strong>Miễn phí 100%:</strong> Không chi phí đăng tin, không phí hoa hồng.</p>
@@ -241,9 +253,11 @@
 						<p><span class="text-primary">✓</span> <strong>Tiện lợi:</strong> Tìm mọi thứ từ giáo trình, đồ điện tử, đến vật dụng phòng KTX.</p>
 					</div>
 					
-					<div class="d-grid mt-5">
-						<a href="#subscribe" class="btn btn-primary px-5 py-3">Tải App Ngay</a>
-					</div>
+					<div class="d-grid gap-3 mt-5">
+					<a href="#subscribe" class="btn btn-primary px-5 py-3">
+						Tải App Ngay
+					</a>
+				</div>
 
 				</div>
 			</div>
