Rename app from Student Exchange to ReverseUni

--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html>
 
 <head>
-	<title>Student Exchange - App Trao Đổi Đồ Cũ Làng Đại Học</title>
+	<title>ReverseUni - App Trao Đổi Đồ Cũ Làng Đại Học</title>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="format-detection" content="telephone=no">
 	<meta name="apple-mobile-web-app-capable" content="yes">
-	<meta name="author" content="Student Exchange Team">
+	<meta name="author" content="ReverseUni Team">
 	<meta name="keywords" content="trao đổi đồ cũ, sinh viên, làng đại học, tiết kiệm, đồ cũ">
-	<meta name="description" content="Student Exchange - Ứng dụng trao đổi đồ cũ an toàn, nhanh chóng và miễn phí cho sinh viên Làng Đại học.">
+	<meta name="description" content="ReverseUni - Ứng dụng trao đổi đồ cũ an toàn, nhanh chóng và miễn phí cho sinh viên Làng Đại học.">
 
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
 
