--- a/index.html
+++ b/index.html
@@ -143,9 +143,9 @@
 				</div>
 				<div class="col-md-6 mt-5 mt-md-0" data-aos="fade-left">
 					<div class="text-content ps-md-5">
-						<h2 class="display-1 secondary-font">Student Exchange.</h2>
+						<h2 class="display-1 secondary-font">ReverseUni.</h2>
 						<h4 class="secondary-heading py-3">Từ Sinh Viên, Vì Sinh Viên</h4>
-						<p>Student Exchange là dự án phi lợi nhuận với mục tiêu tạo ra một nền tảng trao đổi đồ cũ dành riêng cho sinh viên Làng Đại học. Chúng tôi hiểu rằng việc "pass đồ" là nhu cầu thiết yếu, giúp bạn tiết kiệm chi phí và góp phần bảo vệ môi trường.</p>
+						<p>ReverseUni là dự án phi lợi nhuận với mục tiêu tạo ra một nền tảng trao đổi đồ cũ dành riêng cho sinh viên Làng Đại học. Chúng tôi hiểu rằng việc "pass đồ" là nhu cầu thiết yếu, giúp bạn tiết kiệm chi phí và góp phần bảo vệ môi trường.</p>
 						<a href="#" class="border-animation mt-2">Tìm Hiểu Thêm Về Đội Ngũ</a>
 					</div>
 
@@ -242,7 +242,7 @@
 				</div>
 				<div class="col-md-6 ps-md-5 mt-5 mt-md-0" data-aos="fade-left">
 <div class="mb-5" > 
-    <h2 class="display-3" style="margin-top: 2cm;">Vì Sao Chọn Student Exchange?</h2>
+    <h2 class="display-3" style="margin-top: 2cm;">Vì Sao Chọn ReverseUni?</h2>
     <h4 class="secondary-heading py-3">Lợi Ích Cho Sinh Viên Làng Đại Học</h4>
     <p>Chúng tôi xây dựng một cộng đồng an toàn, tiết kiệm và bền vững. Việc trao đổi đồ cũ giúp bạn tiết kiệm tiền và góp phần giảm rác thải.</p>
 </div>
@@ -489,7 +489,7 @@
 		<div class="container-fluid">
 
 			<div class="d-md-flex justify-content-between">
-				<p class="fs-6 m-0">© 2024 Student Exchange Team. All rights reserved.</p>
+				<p class="fs-6 m-0">© 2024 ReverseUni Team. All rights reserved.</p>
 				<p class="fs-6 m-0">Template Gốc by: <a href="http://www.templatesjungle.com/"
 						class="text-primary" target="_blank">TemplatesJungle</a>
 				</p>
