Update app download link in index.html

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 							<div class="billbord-section">
 								<h4 class="secondary-heading py-3">Giải Pháp Tiết Kiệm Cho Làng Đại Học</h4>
 								<p>Tìm kiếm, trao đổi, hoặc tặng đi những món đồ bạn không còn dùng tới. Nhanh chóng, an toàn và ngay trong cộng đồng sinh viên của bạn.</p>
-								<a href="#subscribe" class="btn btn-outline-primary px-5 py-3">Tải App Ngay</a>
+								<a href="https://drive.google.com/file/d/14RqmJnSXNsa7OJ24mDu0rw9cUBerLxUJ/view?usp=sharing" class="btn btn-outline-primary px-5 py-3">Tải App Ngay</a>
 								<a href="https://www.behance.net/gallery/240242235/ReuseUni-Student-Marketplace-App"
 								class="btn btn-outline-primary px-5 py-3"
 								target="_blank">
